Tweak Text to Prevent Wrapping on Zoom-in

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    white-space: nowrap;
     font-size: 2.5em;
     background-color: var(--maincolor);
     color: white;
@@ -70,6 +71,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    white-space: nowrap;
     color: var(--maincolor);
     border-radius: 20em;
     box-shadow: 0.25em 0.25em 2.5em #252525;
